stage1_cifar10/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops
  labels:
    name: mlops
    purpose: machine-learning-operations
